--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
     margin: 0%;
     box-sizing: border-box;
 }
+body{
+    background-color: black;
+}
 .container{
     width: 100%;
     height: 100vh;
